--- a/RAContainment/RAContainment-POC/RAContainment-POC/RootViewController.xib
+++ b/RAContainment/RAContainment-POC/RAContainment-POC/RootViewController.xib
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6724" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RootViewController">
             <connections>
                 <outlet property="homeButton" destination="z7f-sA-biO" id="Sj2-ug-dy1"/>
-                <outlet property="rootView" destination="i5M-Pr-FkT" id="Viy-IL-mvb"/>
+                <outlet property="rootView" destination="nUD-cd-7WF" id="6VM-7O-tw5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,7 +19,7 @@
                 <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Omy-U2-mh4">
                     <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                     <items>
-                        <barButtonItem width="100" style="plain" systemItem="fixedSpace" id="bS8-rf-ABa"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="mJm-dc-6E0"/>
                         <barButtonItem title="Home" id="z7f-sA-biO" userLabel="Home">
                             <connections>
                                 <action selector="homeItem:" destination="-1" id="4cE-4R-XFr"/>
@@ -37,25 +37,36 @@
                                 <action selector="secondDetail:" destination="-1" id="MxA-3Z-vDn"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="1xm-2g-kVp"/>
                     </items>
                 </toolbar>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nrS-WK-lNZ">
-                    <rect key="frame" x="277" y="289" width="46" height="21"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nUD-cd-7WF">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="556"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Su1-Em-bYM">
+                            <rect key="frame" x="280" y="263" width="41" height="30"/>
+                            <state key="normal" title="Home">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" red="0.87843137250000003" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="21" id="mqz-tm-kRB"/>
+                        <constraint firstItem="Su1-Em-bYM" firstAttribute="centerX" secondItem="nUD-cd-7WF" secondAttribute="centerX" id="76e-VV-as9"/>
+                        <constraint firstItem="Su1-Em-bYM" firstAttribute="centerY" secondItem="nUD-cd-7WF" secondAttribute="centerY" id="9R4-mZ-FrB"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                </view>
             </subviews>
-            <color key="backgroundColor" red="0.87351612538611212" green="1" blue="0.99495662403828056" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="Omy-U2-mh4" secondAttribute="bottom" id="CRd-PA-5tv"/>
-                <constraint firstItem="Omy-U2-mh4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Os7-Gc-HhC"/>
-                <constraint firstItem="nrS-WK-lNZ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="289" id="gpd-oR-uYf"/>
-                <constraint firstItem="Omy-U2-mh4" firstAttribute="centerX" secondItem="nrS-WK-lNZ" secondAttribute="centerX" id="ozN-4r-1mv"/>
-                <constraint firstAttribute="trailing" secondItem="Omy-U2-mh4" secondAttribute="trailing" id="vnI-qw-Ifq"/>
+                <constraint firstItem="nUD-cd-7WF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="8zi-vI-2qC"/>
+                <constraint firstItem="nUD-cd-7WF" firstAttribute="leading" secondItem="Omy-U2-mh4" secondAttribute="leading" id="DTR-Jx-hrX"/>
+                <constraint firstItem="Omy-U2-mh4" firstAttribute="top" secondItem="nUD-cd-7WF" secondAttribute="bottom" id="EvI-Qx-moy"/>
+                <constraint firstAttribute="trailing" secondItem="nUD-cd-7WF" secondAttribute="trailing" id="alm-6Y-vIY"/>
+                <constraint firstItem="Omy-U2-mh4" firstAttribute="trailing" secondItem="nUD-cd-7WF" secondAttribute="trailing" id="eQw-2q-wmN"/>
+                <constraint firstItem="nUD-cd-7WF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="qI8-JO-6cM"/>
+                <constraint firstAttribute="bottom" secondItem="Omy-U2-mh4" secondAttribute="bottom" id="vEo-v0-vFz"/>
             </constraints>
         </view>
     </objects>
